latest/quality/clang_tidy/lola_public_api_benchmarks.cpp.AspectRulesLintClangTidy.out
8841 warnings generated.
/home/runner/.bazel/sandbox/linux-sandbox/4744/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_public_api_benchmarks.cpp:61:15: error: Value stored to '_' during its initialization is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
   61 |     for (auto _ : state)
      |               ^ ~
/home/runner/.bazel/sandbox/linux-sandbox/4744/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_public_api_benchmarks.cpp:61:15: note: Value stored to '_' during its initialization is never read
   61 |     for (auto _ : state)
      |               ^ ~
/home/runner/.bazel/sandbox/linux-sandbox/4744/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_public_api_benchmarks.cpp:73:15: error: Value stored to '_' during its initialization is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
   73 |     for (auto _ : state)
      |               ^ ~
/home/runner/.bazel/sandbox/linux-sandbox/4744/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_public_api_benchmarks.cpp:73:15: note: Value stored to '_' during its initialization is never read
   73 |     for (auto _ : state)
      |               ^ ~
Suppressed 9005 warnings (8829 in non-user code, 166 NOLINT, 10 with check filters).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
2 warnings treated as errors
